<resources>
    <string name="app_name">Home Pedagang</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string name="judul">judul</string>
    <string name="kamu_apa_sekarang">belum ada deskripsi</string>
    <string name="nama_dagangan">Es Krim</string>
    <string name="deskripsi_dagangan">Es Krim ini sangat lezat dan terbuat dari susu murni dan permentasi alami</string>
    <string name="type_bedagang">Type Bedagang</string>
    <string name="diam">Diam</string>
    <string name="berkeliling">Berkeliling</string>
    <string name="nama_pedagang">Syamsidin</string>
    <string name="email_pedagang">syamsidin@gmail.com</string>
    <string name="hp_pedagang">08573423233</string>
    <string name="password">*********</string>
    <string name="alamat">Surade Jampangkulon</string>
    <string name="statistik_pengunjung">Statistik Pengunjung</string>
    <string name="pengujung">500 Pengunjung</string>
    <string name="statistik_pelanggan">Statistik Pelanggan</string>
    <string name="pelanggan">400 Pelanggan</string>
</resources>
