<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/list_produk" >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="5dp"
        android:id="@+id/card1"
        android:layout_below="@+id/list_produk"
        card_view:cardElevation="5dp" 
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistik_pengunjung"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengujung" />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart1"
                android:layout_width="fill_parent"
                android:layout_height="250dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="5dp"
        android:layout_below="@+id/card1"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistik_pelanggan"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:text="@string/pelanggan" />
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="fill_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart2"
                android:layout_width="fill_parent"
                android:layout_height="250dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
